[package]
name = "rusty_stern"
version = "0.1.0"
edition = "2021"
description = "a rust implementation of stern (kubernetes)"
authors = ["https://github.com/alexandreseris"]
homepage = "https://github.com/alexandreseris/rusty_stern"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1"
kube = { version = "0.76.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bytes = "1.2.1"
futures = "0.3.17"
regex = "1"
colors-transform = "0.2.11"
clap = { version = "4.0.26", features = ["derive"] }
home = "0.5.4"
serde = "1.0.147"
serde_json = "1.0.88"
validator = { version = "0.16.0", features = ["derive"] }
rusty_stern_traits = { path = "./rusty_stern_traits" }
thiserror = "1.0.37"
