[package]
name = "rusty_stern"
version = "1.0.0"
edition = "2021"
description = "a rust implementation of stern (kubernetes)"
authors = ["https://github.com/alexandreseris"]
homepage = "https://github.com/alexandreseris/rusty_stern"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.3"
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_25"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bytes = "1.5.0"
futures = "0.3.28"
regex = "1"
colors-transform = "0.2.11"
clap = { version = "4.4.6", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
thiserror = "1.0.49"
chrono = "0.4.31"
